--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,43 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
-    <title>Regex Tester</title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv='refresh'>
+    <title>regex101:build,test,and debug</title>
 </head>
 <body>
-    <h1>Regex Tester</h1>
-    <form method="POST">
-        <label for="pattern">Regular Expression:</label>
-        <input type="text" name="pattern" value="{{ pattern }}" required>
-        <br>
-        <label for="test_string">Test String:</label>
-        <input type="text" name="test_string" value="{{ test_string }}" required>
-        <br>
-        <input type="submit" value="Test">
-    </form>
-    <div>
-        <h2>Result:</h2>
-        <p>{{ result }}</p>
-    </div>
+<h1>Regular expressions 101</h1>
+<form action="" method="post" autocomplete="on">
+    <label>REGULAR EXPRESSION</label><br>
+    <input  type="text"  name = 'input1' placeholder="insert your regular expression here" style="font-size: 15px;height:50px; width:300px"
+                                value="{{ regexp1 }}"  ><br><br>
+    <label>TEST STRING</label><br>
+    <textarea id="textarea1" name="input2" rows="6" cols="80" placeholder="insert your test string here"></textarea><br>
+    <button type="submit" >Get Result</button>
+    {% if count!= 0 and regexp1 != "" %}
+        {% if count!=None %}
+            <h3>Result:</h3>
+            <p>Match Found!</p>
+            <h3>Total number of matches found: {{ count }} for text  {{stro}} </h3>
+   
+            {% for i in match  %}
+                    {{ i }}
+            {% endfor %}
+        {% endif %}
+    {% elif count == 0 and regexp != "" %}
+        <h3>Match not Found!</h3>
+    {% endif %}
+
+</form>
+
+<script>
+    if ( window.history.replaceState ) {
+        window.history.replaceState( null, null, window.location.href );
+    }
+</script>
+
 </body>
 </html>
